--- a/PafAssignment2/.settings/org.eclipse.wst.common.component
+++ b/PafAssignment2/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="PafAssignment2-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="NewPafass-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="PafAssignment2"/>
         <property name="java-output-path" value="/PafAssignment2/build/classes"/>
+        <property name="context-root" value="NewPafass"/>
     </wb-module>
 </project-modules>
